infra-terraform-environments/env/dev/dev/ap-south-1/eks/eks_controlplane/istiovalues/qa/celigo-gateway-internal.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: celigo-gateway-internal
  namespace: istio-routing
spec:
  selector:
    istio: istio-ingress-internal
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
