infra-terraform-environments/env/dev/dev/ap-south-1/eks/eks_controlplane/istiovalues/qa/gw.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-in-gw
  namespace: default
spec:
  selector:
    app: istio-ingress # istio ingress pod 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "*.example.com"
