infra-terraform-environments/env/dev/dev/ap-south-1/eks/eks_controlplane/istiovalues/qa/vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-in-vs
  namespace: default
spec:
  hosts:
    - "nci.example.com"
    - "abe.example.com"
  gateways:
    - istio-in-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: "shopify-netsuite-connector-ia"
        port:
          number: 7000
